--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <h1>Presensi Santri</h1>
-  <ul id="santriList"></ul>
+  <ul id="santriList">Memuat data...</ul>
   <script>
     if ('serviceWorker' in navigator) {
       navigator.serviceWorker.register('service-worker.js');
