--- a/index.html
+++ b/index.html
@@ -63,11 +63,16 @@
 
   <script>
     // TODO: Ganti dengan konfigurasi proyek Firebase kamu
-    const firebaseConfig = {
-      apiKey: "YOUR_API_KEY",
-      authDomain: "YOUR_PROJECT_ID.firebaseapp.com",
-      projectId: "YOUR_PROJECT_ID",
-    };
+const firebaseConfig = {
+  apiKey: "AIzaSyD05Fd11awUOvfMieSqei5Jhf2YANhj-7A",
+  authDomain: "kdtguru.firebaseapp.com",
+  databaseURL: "https://kdtguru-default-rtdb.asia-southeast1.firebasedatabase.app",
+  projectId: "kdtguru",
+  storageBucket: "kdtguru.firebasestorage.app",
+  messagingSenderId: "1077481972391",
+  appId: "1:1077481972391:web:a13aa58dd06fec5bdff182",
+  measurementId: "G-CZ1NTG5Q78"
+};
 
     firebase.initializeApp(firebaseConfig);
     const db = firebase.firestore();
